# structure_programming

./: CMakeLists.txt  README.md
src/: exponentiation_while.c  task4.c  task5.c
src/assignment1/: Q1_fixErrors.c  Q2_multiple.c  Q3_english.c  Q4_nested.c
src/assignment_1/: Q2_multiple.c  Q3_english.c  Q5_sequence.c
src/assignment_2/: task1.c  task2.c  task3.c  task4.c
src/exercises/: array.c
src/func/: main.c
src/homework4/: exponentiation_for.c  task1.c  task2.c  task3.c  task5.c
src/inclasstest/: inclasstest.c
src/inclasstest_2/: Top3.cpp  a2Z.c  one2thirty.c
src/inclasstest_3/: byHighestScore.txt  byOldestAge.txt  data.in  q1.c  q2.c  q3.c
src/lab12/: task1.c  task2.c  task3.c
src/lab5/: task1.c  task2.c  task3.c  task4.c  task5.c
src/lab6/: task1.c  task2.c  task3.c  task4.c
src/lab9/: task2.c
src/linklist/: homework.c  tmp.c
src/project/: Makefile  main.c  notebook.txt
src/quicktest/: main.c
src/string/: classexercise.c  classexercise2.c  stringfunctions.c  task1.c  task2.c  test.c
src/struct/: class_task.cpp  class_task_2.cpp  class_task_formated.cpp  task1.c  task2.c
src/struct/answer/: a.out  task1.cpp  task2.cpp  task2_cormated.cpp
