cmake_minimum_required (VERSION 2.8)

project (Week_2)

add_executable (bin/task1 src/task1.c)
add_executable (bin/task2 src/task2.c)
add_executable (bin/task3 src/task3.c)
add_executable (bin/task4 src/task4.c)
add_executable (bin/task5 src/task5.c)
add_executable (bin/exponentiation_for.c src/exponentiation_for.c)
add_executable (bin/exponentiation_while.c src/exponentiation_while.c)
